--- a/app/src/main/res/layout/fragment_custom_offering.xml
+++ b/app/src/main/res/layout/fragment_custom_offering.xml
@@ -8,46 +8,49 @@
 
 
   <ImageButton
-    android:id="@+id/mass"
-    android:layout_width="180dp"
-    android:layout_height="151dp"
-    android:background="#FFFFFF"
-    android:scaleType="centerInside"
-    android:src="@drawable/mass"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.508"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/funeral"
-    app:layout_constraintVertical_bias="0.0" />
+      android:id="@+id/mass"
+      android:layout_width="180dp"
+      android:layout_height="151dp"
+      android:background="#FFFFFF"
+      android:scaleType="centerInside"
+      android:src="@drawable/mass"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/funeral"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="@+id/funeral"
+      app:layout_constraintTop_toBottomOf="@+id/funeral"
+      app:layout_constraintVertical_bias="0.0"
+      android:contentDescription="@string/holy_mass_descr" />
 
   <ImageButton
-    android:id="@+id/funeral"
-    android:layout_width="177dp"
-    android:layout_height="159dp"
-    android:background="#FFFFFF"
-    android:scaleType="centerInside"
-    android:src="@drawable/funeral"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.513"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/confession"
-    app:layout_constraintVertical_bias="0.0" />
+      android:id="@+id/funeral"
+      android:layout_width="177dp"
+      android:layout_height="159dp"
+      android:background="#FFFFFF"
+      android:scaleType="centerInside"
+      android:src="@drawable/funeral"
+      app:layout_constraintBottom_toTopOf="@+id/mass"
+      app:layout_constraintEnd_toEndOf="@+id/confession"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="@+id/confession"
+      app:layout_constraintTop_toBottomOf="@+id/confession"
+      app:layout_constraintVertical_bias="0.0"
+      android:contentDescription="@string/funeral_descr" />
 
   <ImageButton
-    android:id="@+id/confession"
-    android:layout_width="181dp"
-    android:layout_height="157dp"
-    android:background="#FFFFFF"
-    android:scaleType="centerInside"
-    android:src="@drawable/confession"
+      android:id="@+id/confession"
+      android:layout_width="181dp"
+      android:layout_height="157dp"
+      android:background="#FFFFFF"
+      android:scaleType="centerInside"
+      android:src="@drawable/confession"
 
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.506"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.117" />
+      app:layout_constraintBottom_toTopOf="@+id/funeral"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.117"
+      android:contentDescription="@string/confession_descr" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
