--- a/app/src/main/res/layout/fragment_prayer.xml
+++ b/app/src/main/res/layout/fragment_prayer.xml
@@ -15,10 +15,9 @@
     android:enabled="false"
     android:gravity="start|top"
     android:inputType="textMultiLine"
-    android:textAlignment="center"
     android:textStyle="italic"
     android:textColor="@color/colorPrimaryDark"
-    android:textSize="25dp"
+    android:textSize="25sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +28,7 @@
     android:layout_width="250dp"
     android:layout_height="60dp"
     android:textAlignment="center"
-    android:textSize="30dp"
+    android:textSize="30sp"
     android:textColor="@color/colorPrimaryDark"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
